--- a/Tool-Data-Inventory-Manager/Resources/Localization/Strings.en.xaml
+++ b/Tool-Data-Inventory-Manager/Resources/Localization/Strings.en.xaml
@@ -83,7 +83,7 @@
     <sys:String x:Key="Tools">Tools</sys:String>
     <sys:String x:Key="Products">Products</sys:String>
     <sys:String x:Key="Machines">Machines</sys:String>
-    <sys:String x:Key="Export">Export</sys:String>
+    <sys:String x:Key="Export">Export/Search</sys:String>
     <sys:String x:Key="Search">Search</sys:String>
     <sys:String x:Key="Price">Price</sys:String>
     <sys:String x:Key="DeleteSelectedTool">Delete selected tool</sys:String>
