--- a/Tool-Data-Inventory-Manager/Resources/Localization/Strings.de.xaml
+++ b/Tool-Data-Inventory-Manager/Resources/Localization/Strings.de.xaml
@@ -82,8 +82,12 @@
     <sys:String x:Key="Tools">Werkzeuge</sys:String>
     <sys:String x:Key="Products">Produkte</sys:String>
     <sys:String x:Key="Machines">Maschinen</sys:String>
-    <sys:String x:Key="Export">Exportieren/Suchen</sys:String>
-    <sys:String x:Key="Search">Suche</sys:String>
+    <sys:String x:Key="ExportTab">Exportieren/Suchen</sys:String>
+    <sys:String x:Key="Export">Exportieren</sys:String>
+    <sys:String x:Key="Export_Search">Exportieren Suche</sys:String>
+    <sys:String x:Key="SearchToolTip">Suche in allen Daten (Maschinenname, Produktnummer, Werkzeugname usw.)</sys:String>
+    <sys:String x:Key="SearchResults">Suchergebnisse</sys:String>
+    <sys:String x:Key="ToolName">Werkzeugname</sys:String>
     <sys:String x:Key="Price">Preis</sys:String>
     <sys:String x:Key="DeleteSelectedTool">Ausgewähltes Werkzeug löschen</sys:String>
     <sys:String x:Key="LoggedIn">Angemeldet: </sys:String>
