--- a/Tool-Data-Inventory-Manager/Resources/Localization/Strings.hu.xaml
+++ b/Tool-Data-Inventory-Manager/Resources/Localization/Strings.hu.xaml
@@ -82,8 +82,12 @@
     <sys:String x:Key="Tools">Szerszámok</sys:String>
     <sys:String x:Key="Products">Termékek</sys:String>
     <sys:String x:Key="Machines">Gépek</sys:String>
-    <sys:String x:Key="Export">Exportálás/Keresés</sys:String>
-    <sys:String x:Key="Search">Keresés</sys:String>
+    <sys:String x:Key="ExportTab">Exportálás/Keresés</sys:String>
+    <sys:String x:Key="Export">Exportálás</sys:String>
+    <sys:String x:Key="Export_Search">Exportálás Keresés</sys:String>
+    <sys:String x:Key="SearchToolTip">Keresés minden adatban (gépnév, termékszám, szerszámnév stb.)</sys:String>
+    <sys:String x:Key="SearchResults">Keresési eredmények</sys:String>
+    <sys:String x:Key="ToolName">Szerszámnév</sys:String>
     <sys:String x:Key="Price">Ár</sys:String>
     <sys:String x:Key="DeleteSelectedTool">Kijelölt szerszám törlése</sys:String>
     <sys:String x:Key="LoggedIn">Bejelentkezve: </sys:String>
