--- a/Tool-Data-Inventory-Manager/Features/InventoryManager/Views/WorkspaceWindow.xaml
+++ b/Tool-Data-Inventory-Manager/Features/InventoryManager/Views/WorkspaceWindow.xaml
@@ -136,7 +136,7 @@
                                     <ComboBoxItem Content="{DynamicResource Tools}"/>
                                 </ComboBox>
                                 <TextBox x:Name="txtSearch" Width="200" TextChanged="TxtSearch_TextChanged" ToolTip="{DynamicResource SearchToolTip}"/>
-                                
+                                <!--This is needed if the highers wamt it. The code behind it is done. You just have to delete the comment.-->
                                 <!--<Button x:Name="btn_export_search" Content="{DynamicResource Export_Search}" Click="btn_export_search_Click" VerticalAlignment="Top" Width="140" Height="25" Margin="380,0,5,0" HorizontalContentAlignment="Right" FlowDirection="RightToLeft" HorizontalAlignment="Right"/>-->
                             </StackPanel>
                         </GroupBox>
