--- a/Tool-Data-Inventory-Manager/Resources/Localization/Strings.en.xaml
+++ b/Tool-Data-Inventory-Manager/Resources/Localization/Strings.en.xaml
@@ -1,6 +1,7 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:sys="clr-namespace:System;assembly=mscorlib">
+﻿<ResourceDictionary
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:sys="clr-namespace:System;assembly=mscorlib">
     <sys:String x:Key="Login">Login</sys:String>
     <sys:String x:Key="Register">Register</sys:String>
     <sys:String x:Key="Email">Email</sys:String>
@@ -33,7 +34,7 @@
     <sys:String x:Key="PleaseFillAllPasswordFields">Please fill in both password fields.</sys:String>
     <sys:String x:Key="NewPasswordsNotMatch">The new passwords do not match.</sys:String>
     <sys:String x:Key="EmailNotExist">This email address does not exist.</sys:String>
-    <sys:String x:Key="ErrorChangingPassword">An error occurred while changing your password: </sys:String>
+    <sys:String x:Key="ErrorChangingPassword">An error occurred while changing your password:</sys:String>
     <sys:String x:Key="PasswordChangedSuccessfully">Password changed successfully!</sys:String>
     <sys:String x:Key="PleaseEnterEmailAddress">Please enter your email address.</sys:String>
     <sys:String x:Key="NoUserFoundWithThisEmail">No user found with this email address.</sys:String>
@@ -84,13 +85,14 @@
     <sys:String x:Key="Products">Products</sys:String>
     <sys:String x:Key="Machines">Machines</sys:String>
     <sys:String x:Key="ExportTab">Export/Search</sys:String>
+    <sys:String x:Key="Export">Export</sys:String>
     <sys:String x:Key="Export_Search">Export Search</sys:String>
     <sys:String x:Key="SearchToolTip">Search in all data (machine name, product number, tool name, etc.)</sys:String>
     <sys:String x:Key="SearchResults">Search Results</sys:String>
     <sys:String x:Key="ToolName">Tool Name</sys:String>
     <sys:String x:Key="Price">Price</sys:String>
     <sys:String x:Key="DeleteSelectedTool">Delete selected tool</sys:String>
-    <sys:String x:Key="LoggedIn">Logged in: </sys:String>
+    <sys:String x:Key="LoggedIn">Logged in:</sys:String>
     <sys:String x:Key="DeleteSelectedProduct">Delete selected product</sys:String>
     <sys:String x:Key="DeleteMachine">Delete machine</sys:String>
     <sys:String x:Key="DeleteProductConfirmation">Are you sure you want to delete the product "{0} - {1}"?</sys:String>
